<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="fill">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="204dp"
            android:layout_height="30dp"
            android:text="@string/enterEmail" />

        <EditText
            android:id="@+id/emailEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/typeEmail"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="204dp"
            android:layout_height="30dp"
            android:text="@string/enterPwd" />



        <EditText
            android:id="@+id/pwdEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:text="@string/button"/>
    </LinearLayout>



</LinearLayout>
